--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ body{
     background-color: black;
     color:white;
     text-align:center;
-    padding-top:8%;
+/*     padding-top:8%; */
     font-family: 'Poiret One', cursive;
  }
 
